--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
                 </div>
                 <div class="inicio-imagem">
                     <img
-                        src="img/anna-schmidt.jpg"
+                        src="anna-schmidt.jpg.JPG"
                         alt="Foto de formatura de Anna Schmidt"
                         class="flutuar"
                     />
@@ -612,7 +612,7 @@
                 <div class="sobre-content">
                     <div class="sobre-imagem">
                         <img
-                            src="img/foto-sobre.jpg"
+                            src="anna-schmidt.jpg.JPG"
                             alt="Foto de Anna Schmidt"
                         />
                     </div>
@@ -846,6 +846,7 @@ Busco oportunidades para aplicar meus conhecimentos em projetos reais, aprender 
     </script>
 </body>
 </html>
+
 
 
 
