--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
                 </div>
                 <div class="inicio-imagem">
                     <img
-                        src="anna-schmidt.jpg.JPG"
+                        src="anna-schmidt.jpg"
                         alt="Foto de formatura de Anna Schmidt"
                         class="flutuar"
                     />
@@ -846,6 +846,7 @@ Busco oportunidades para aplicar meus conhecimentos em projetos reais, aprender 
     </script>
 </body>
 </html>
+
 
 
 
