Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
                 </div>
                 <div class="inicio-imagem">
                     <img
-                        src="anna-schmidt.jpg"
+                        src="anna-schmidt.jpg.JPG"
                         alt="Foto de formatura de Anna Schmidt"
                         class="flutuar"
                     />
