--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
                     <h3>Olá, sou</h3>
                     <h1>Anna Schmidt</h1>
                     <h2><span class="typing-effect"></span></h2>
-                    <a href="https://1drv.ms/w/c/dcf30a31248caac9/Eb-5r6h0oXhCu5Glmfv4H3ABu2ggc9xTyxn_9x4YRKZGKQ?e=dGmF66" class="btn-cv" target="_blank">Download CV</a>
+                    <a href="CURRICULO DEFENITIVO.pdf" class="btn-cv" target="_blank">Download CV</a>
                 </div>
                 <div class="inicio-imagem">
                     <img
@@ -846,6 +846,7 @@ Busco oportunidades para aplicar meus conhecimentos em projetos reais, aprender 
     </script>
 </body>
 </html>
+
 
 
 
