--- a/index.html
+++ b/index.html
@@ -915,12 +915,12 @@ Busco oportunidades para aplicar meus conhecimentos em projetos reais, aprender 
 </script>
 <!-- Música de Fundo -->
 <audio id="musicaFundo" autoplay loop>
-  <source src="musica.mp3" type="audio/mp3">
+  <source src="music.´m´3.mp3" type="audio/mp3">
   Seu navegador não suporta áudio HTML5.
 </audio>
 <!-- Música de Fundo -->
 <audio id="musicaFundo" autoplay loop>
-  <source src="musica.mp3" type="audio/mp3">
+  <source src="music.´m´3.mp3" type="audio/mp3">
   Seu navegador não suporta áudio HTML5.
 </audio>
 
@@ -975,6 +975,7 @@ Busco oportunidades para aplicar meus conhecimentos em projetos reais, aprender 
 </style>
 </script>
 </body>
+
 
 
 
