--- a/index.html
+++ b/index.html
@@ -784,7 +784,7 @@ Busco oportunidades para aplicar meus conhecimentos em projetos reais, aprender 
     <script>
         // Efeito de digitação com múltiplas frases
         const typingElement = document.querySelector(".typing-effect");
-        const phrases = ["Desenvolvedora Front-End", "Criadora de Interfaces", "Apaixonada por UX/UI"];
+        const phrases = ["Desenvolvedora Full Stack", "Criadora de Projetos", "Apaixonada por Tecnologia"];
         let currentPhraseIndex = 0;
         let charIndex = 0;
         let isDeleting = false;
@@ -969,6 +969,7 @@ Busco oportunidades para aplicar meus conhecimentos em projetos reais, aprender 
 </style>
 </script>
 </body>
+
 
 
 
