--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
                     <h3>Olá, sou</h3>
                     <h1>Anna Schmidt</h1>
                     <h2><span class="typing-effect"></span></h2>
-                    <a href="file:///D:/Curri%CC%81culo.pdf" class="btn-cv" target="_blank">Download CV</a>
+                    <a href="d:\Currículo.pdf" class="btn-cv" target="_blank">Download CV</a>
                 </div>
                 <div class="inicio-imagem">
                     <img
@@ -969,6 +969,7 @@ Busco oportunidades para aplicar meus conhecimentos em projetos reais, aprender 
 </style>
 </script>
 </body>
+
 
 
 
