Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -639,13 +639,17 @@ Busco oportunidades para aplicar meus conhecimentos em projetos reais, aprender 
                             src="https://placehold.co/400x250/9b59b6/121212?text=SkillSwap"
                             alt="Imagem do Projeto SkillSwap"
                         />
+                       <img
+                            src="https://img.icons8.com/pulsar-gradient/1200/github.jpg"
+                            alt="Imagem do Projeto GitHub Explorer"
+                        />
                         <div class="projeto-info">
-                            <h3>Troca de Habilidades</h3>
+                            <h3>GitHub Explorer</h3>
                             <p>
-                                Plataforma de troca de habilidades que conecta pessoas para compartilhar conhecimentos e aprender novas competências de forma colaborativa.
+                                O GitHub Explorer é um projeto desenvolvido para demonstrar habilidades avançadas com React, incluindo consumo de APIs REST, manipulação de estados complexos e otimização de requisições assíncronas.
                             </p>
                             <div class="projeto-links">
-                                <a href="https://skillswap.mysoftwares.com.br" target="_blank"
+                                <a href="https://github.com/anninhaschmid/GitHub-Repo-Finder.github.io" target="_blank"
                                     >Visitar Site <i class="fa-solid fa-arrow-up-right-from-square"></i
                                 ></a>
                             </div>
@@ -653,16 +657,16 @@ Busco oportunidades para aplicar meus conhecimentos em projetos reais, aprender 
                     </div>
                     <div class="projeto-card">
                         <img
-                            src="https://placehold.co/400x250/8e44ad/121212?text=FAP-MYSQL"
-                            alt="Imagem do Projeto FAP-MYSQL"
+                            src="https://img.pikbest.com/wp/202350/chef-cook-cooking-goes-digital-access-online-courses-and-restaurant-deliveries-via-smartphone-3d-cartoon-illustration_9788244.jpg!bwr800"
+                            alt="Imagem do Projeto Chef Digital"
                         />
                         <div class="projeto-info">
-                            <h3>Banco de Dados</h3>
+                            <h3>Chef Digital</h3>
                             <p>
-                                Projeto de banco de dados MySQL para a disciplina de Fundamentos de Arquitetura de Computadores (FAP), focado em modelagem e implementação de esquemas de banco de dados.
+                                Projeto Chef Digital com filtragem dinâmica de receitas por título ou categoria com otimização de desempenho (debounce).
                             </p>
                             <div class="projeto-links">
-                                <a href="https://github.com/anninhaschmid/FAP-MYSQL" target="_blank"
+                                <a href="https://github.com/anninhaschmid/Chef-Digital.github.io" target="_blank"
                                     >Ver no GitHub <i class="fa-solid fa-arrow-up-right-from-square"></i
                                 ></a>
                             </div>
@@ -969,6 +973,7 @@ Busco oportunidades para aplicar meus conhecimentos em projetos reais, aprender 
 </style>
 </script>
 </body>
+
 
 
 
