Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
                 </div>
                 <div class="inicio-imagem">
                     <img
-                        src="d:\sistema web medicos 2026\instagram.png"  
+                        src="instagram.png"  
                         alt="Foto de formatura de Anna Schmidt"
                         class="flutuar"
                     />
@@ -961,6 +961,7 @@ Busco oportunidades para aplicar meus conhecimentos em projetos reais, aprender 
 </style>
 </script>
 </body>
+
 
 
 
