--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
                 <div class="sobre-content">
                     <div class="sobre-imagem">
                         <img
-                            src="anna-schmidt.jpg.JPG"
+                         src="instagram.png" 
                             alt="Foto de Anna Schmidt"
                         />
                     </div>
@@ -961,6 +961,7 @@ Busco oportunidades para aplicar meus conhecimentos em projetos reais, aprender 
 </style>
 </script>
 </body>
+
 
 
 
